--- a/src/app/views/category/product/product.component.html
+++ b/src/app/views/category/product/product.component.html
@@ -40,18 +40,16 @@
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
-    (selectAllChange)="selectAllChange($event)"
+    (selectAllChange)="selectAllChange()"
     (selectionChange)="selectChange()"
-    [selectAll]="checkAll"
-    dataKey="code"
+    dataKey="name"
     [paginator]="true"
+    [rows]="10"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [totalRecords]="totalRecords"
     [(rows)]="pageSize"
-    (onPage)="onPageSizeChange($event)"
-    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [globalFilterFields]="[
       'code',
       'name',
@@ -76,7 +74,8 @@
       'basePrice',
       'itemGroupModel.description',
       'uoMGroupModel.description'
-    ]">
+    ]"
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
     <ng-template pTemplate="caption">
       <div class="flex justify-content-end">
         <span class="material-symbols-outlined flex align-items-center search-icon-container px-2">
