--- a/src/app/views/category/role-menu/role-menu.component.html
+++ b/src/app/views/category/role-menu/role-menu.component.html
@@ -28,10 +28,10 @@
     *ngIf="loading"
     class="p-3 mb-3"
     [ngStyle]="{
-        backgroundColor: 'var(--highlight-bg)',
-        color: 'var(--highlight-text-color)',
-        borderRadius: 'var(--border-radius)',
-      }">
+      backgroundColor: 'var(--highlight-bg)',
+      color: 'var(--highlight-text-color)',
+      borderRadius: 'var(--border-radius)',
+    }">
     loading...
     <p-progressBar [value]="progressValue"></p-progressBar>
   </div>
@@ -40,19 +40,18 @@
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
-    (selectAllChange)="selectAllChange($event)"
+    (selectAllChange)="selectAllChange()"
     (selectionChange)="selectChange()"
-    [selectAll]="checkAll"
     dataKey="alias"
     [paginator]="true"
+    [rows]="10"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [totalRecords]="totalRecords"
     [(rows)]="pageSize"
-    (onPage)="onPageSizeChange($event)"
-    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]"
-    [globalFilterFields]="['role.name', 'menu.description']">
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [globalFilterFields]="['role.name', 'menu.description']"
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
     <ng-template pTemplate="caption">
       <div class="flex justify-content-end">
         <span class="material-symbols-outlined flex align-items-center search-icon-container px-2">
